inline JavaScript?! BEGON!

--- a/dada/templates/error_invalid_email_screen.tmpl
+++ b/dada/templates/error_invalid_email_screen.tmpl
@@ -9,11 +9,7 @@
   <!-- tmpl_var subscriber.email -->
  </strong>, 
 doesn't seem to pass verification. It's possible that you just typed it in
-incorrectly. You may 
-<a href="#" onclick="history.back(); return false">
-	go back
-</a> 
-and resubmit your address, or use the form below:</p> 
+incorrectly:</p> 
 
 <!-- tmpl_var subscription_form --> 
 
