--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -2,10 +2,12 @@
 
 <form action="<!-- tmpl_var script_url -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="<!-- tmpl_var subscription_form_id default="subscription_form" -->">
 
-<fieldset>
-<legend>
- Subscribe <!-- tmpl_if single_list --> to <!-- tmpl_var list_settings.list_name --><!-- tmpl_else --><!-- /tmpl_if -->
-</legend>
+<!-- tmpl_if show_fieldset --> 
+	<fieldset>
+	<legend>
+	 Subscribe <!-- tmpl_if single_list --> to <!-- tmpl_var list_settings.list_name --><!-- tmpl_else --><!-- /tmpl_if -->
+	</legend>
+<!-- /tmpl_if -->
 
 <!-- tmpl_if single_list --> 
     <!-- tmpl_if list_settings.closed_list -->
@@ -77,15 +79,19 @@ Email&nbsp;Address:
 
 <input type="hidden" name="f" id="f_s" value="subscribe" />
 
-<p style="text-align:right;display:block">
-<input type="submit" value="Subscribe" class="processing" id="subscribe_button" />
-</p> 
 
+<div class="buttonfloat"> 
+	<input type="submit" value="Subscribe" class="processing" id="subscribe_button" />
+</div>
+<div class="floatclear"></div> 
 <!-- tmpl_if give_props --> 
     <p style="font-size:10px;font-family:Verdana,Arial,sans-serif;"><a href="http://dadamailproject.com" target="_blank" style="font-size:10px;font-family:Verdana,Arial,sans-serif;">Powered by <!-- tmpl_var name="PROGRAM_NAME" --> <!-- tmpl_var VER --> Mailing List Manager</a></p>
 <!-- /tmpl_if --> 
 
-</fieldset>
+<!-- tmpl_if show_fieldset --> 
+	</fieldset>
+<!-- /tmpl_if --> 
+
 </form> 
 
 <!-- end subscription_form_widget.tmpl --> 
