--- a/dada/templates/error_already_sent_sub_confirmation_screen.tmpl
+++ b/dada/templates/error_already_sent_sub_confirmation_screen.tmpl
@@ -50,9 +50,7 @@ address: </p>
  </strong> 
 </p>
 
-<p>
- You may resend this confirmation by clicking the button below:
-</p>
+<h1>Resend?</h1>
 
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="POST" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 <input type="hidden" name="f" value="resend_conf" />
