--- a/dada/templates/error_black_listed_screen.tmpl
+++ b/dada/templates/error_black_listed_screen.tmpl
@@ -3,6 +3,10 @@
 <!-- tmpl_set name="title" value="You Are Unable to Subscribe" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
+<!-- tmpl_unless chrome --> 
+	<h1><!-- tmpl_var title --></h1>
+<!-- /tmpl_unless --> 
+
 <p>It seems that your email address, 
 
 	<blockquote>
@@ -13,7 +17,6 @@
 		</p>
 	</blockquote> 
 	
-
 May not be allowed to subscribe to:</p>
 
 <blockquote>
