--- a/dada/templates/error_subscribed_screen.tmpl
+++ b/dada/templates/error_subscribed_screen.tmpl
@@ -3,6 +3,11 @@
 <!-- tmpl_set name="title" value="You're Already Subscribed!" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
+<!-- tmpl_unless chrome --> 
+	<h1><!-- tmpl_var title --></h1>
+<!-- /tmpl_unless --> 
+
+
 <p>
  Your email address, 
  <strong>
@@ -17,30 +22,6 @@
 
 </p>
 
-<p>
- This may be because:
-</p>
-
-<ul>
- <li>You've successfully subscribed to this list in the past.</li>
- <li>You clicked the subscription confirmation link that was mailed to you, twice.</li>
- <li>The list owner has already subscribed your email address.</li>
-</ul>
-
-<p>
- If you would like to subscribe to a different Mailing List, please visit the <!-- tmpl_var PROGRAM_NAME --> 
-	<a href="<!-- tmpl_var PROGRAM_URL -->?email=<!-- tmpl_var subscriber.email -->">
-		main screen
-    </a>, 
-which will have a list of all available lists.
-</p>
-
-<p>If you want to unsubscribe from this list instead, please visit 
- <a href="<!-- tmpl_var PROGRAM_URL -->?f=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML" -->&amp;email=<!-- tmpl_var subscriber.email escape="HTML" -->">
-	this list's main screen
- </a>
-.
-</p>
 
 <!-- tmpl_include error_footer_widget.tmpl -->
 
