--- a/dada/templates/list_page_screen.tmpl
+++ b/dada/templates/list_page_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin list_page_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name -->" -->
+<!-- tmpl_set name="load_colorbox" value="1" -->
+
 
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
@@ -13,8 +15,9 @@
 	</div>
 <!--/tmpl_if--> 
 
-<!-- tmpl_var subscription_form --> 
-
+<div id="modal_subscribe_form">
+	<!-- tmpl_var subscription_form --> 
+</div> 
 
 <div>
 	
