--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -14,6 +14,7 @@
 <!-- jQuery -->
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.8.2.min.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.dadamail.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.user.js"></script>
 
 <!-- tmpl_if load_colorbox --> 
