--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -781,7 +781,7 @@ People will still be able to subscribe/unsubscribe
 	 <table cellspacing="5" >
 	  <tr>
 	   <td>
-	    <input type="checkbox" name="mx_check" id="mx_check" value="1" />
+	    <input type="checkbox" name="mx_check" id="mx_check" value="1" <!-- tmpl_if list_settings.mx_check -->checked="checked"<!-- /tmpl_if --> />
 	   </td>
 	   <td> 
 	    <p>
