--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -10,8 +10,15 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-
 <div id="send_url_email"></div> 
+
+<!-- tmpl_if draft_id --> 
+	<div class="clearskiesbox">
+		<p>
+			Draft message restored below:
+		</p>
+	</div> 
+<!-- /tmpl_If --> 
 
 <form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
 
