What hell is a, "timestap". Sigh.

--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -98,7 +98,7 @@
 			<td>
 				<p>
 					<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
-						<!-- tmpl_var last_modified_timestap --> 
+						<!-- tmpl_var last_modified_timestamp --> 
 					</a>
 				</p> 
 				<td>
