Adds the option to not track mailto: links.

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -101,6 +101,21 @@
 				<p>
 				 All message links will be parsed into redirect links and tracked. 
 				</p> 
+				    <table>   
+				    <tr> 
+				      <td> 
+				      <input type="checkbox" id="tracker_auto_parse_mailto_links" name="tracker_auto_parse_mailto_links"  value="1" <!-- tmpl_if list_settings.tracker_auto_parse_mailto_links -->checked="checked"<!--/tmpl_if -->/>
+				      </td> 
+				      <td> 
+				      <p>
+				       <label for="tracker_auto_parse_mailto_links">Auto Track, mailto: Links</label> 
+				       <br /> 
+				       email addresses in <strong>mailto:</strong> links will also be parsed into redirect links and tracked.
+				      </p> 
+				      </td> 
+				    </tr> 
+				</table>
+				
 			</fieldset>
 		</div> 
 
