--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -35,6 +35,8 @@
 
 </div> 
 <div id="add_email"></div>
+<div id="screen_meta" data-menu_highlight="add"></div>
+
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
 	<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN -->
