--- a/dada/templates/adv_sending_preferences_screen.tmpl
+++ b/dada/templates/adv_sending_preferences_screen.tmpl
@@ -8,6 +8,7 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
 <div id="adv_sending_preferences"></div>
+<div id="screen_meta" data-menu_highlight="adv_sending_preferences"></div>
 
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
