--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin back_link_screen.tmpl -->
 
-
+<div id="screen_meta" data-menu_highlight="back_link"></div>
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Create a Back Link" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
