--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -1,6 +1,9 @@
 <!-- begin change_password_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="You Mailing List &#187; List Password" -->
+<div id="screen_meta" data-menu_highlight="change_password"></div>
+
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
