--- a/dada/templates/delete_email_screen.tmpl
+++ b/dada/templates/delete_email_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin delete_email_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Membership &#187; Remove" -->
+<div id="screen_meta" data-menu_highlight="delete_email"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
