--- a/dada/templates/delete_list_screen.tmpl
+++ b/dada/templates/delete_list_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin delete_list_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Your Mailing List &#187; Delete This Mailing List" -->
+<div id="screen_meta" data-menu_highlight="delete_list"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
