--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -8,6 +8,7 @@
 </div>
 
 <div id="drafts_screen"></div> 
+<div id="screen_meta" data-menu_highlight="drafts"></div>
 
 
 <!-- tmpl_if delete_draft --> 
