--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -1,6 +1,8 @@
 <!-- begin edit_archived_msg.tmpl --> 
 
 <!-- tmpl_set name="title" value="Edit Archived Message" -->
+<div id="screen_meta" data-menu_highlight="view_archive"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
