--- a/dada/templates/edit_archived_msg_prefs_screen.tmpl
+++ b/dada/templates/edit_archived_msg_prefs_screen.tmpl
@@ -2,6 +2,9 @@
 
 <!-- tmpl_set name="title" value="Edit Archived Message Preferences" -->
 
+<div id="screen_meta" data-menu_highlight="view_archive"></div>
+
+
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	 <input type="hidden" name="f" value="edit_archived_msg" /> 
 	
