--- a/dada/templates/edit_html_type_screen.tmpl
+++ b/dada/templates/edit_html_type_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin edit_html_type_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; HTML Screen Templates" -->
+<div id="screen_meta" data-menu_highlight="edit_html_type"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
