--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -2,6 +2,8 @@
 
 
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Email Message Templates" -->
+<div id="screen_meta" data-menu_highlight="edit_type"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
