--- a/dada/templates/feature_set_screen.tmpl
+++ b/dada/templates/feature_set_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin feature_set_screen.tmpl --> 
 
 <!-- tmpl_set name="title" value="Your List Control Panel &#187; Customize Feature Set" -->
+<div id="screen_meta" data-menu_highlight="feature_set"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
