--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -1,6 +1,10 @@
 <!-- begin html_code_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Subscription Form HTML" -->
+
+<div id="screen_meta" data-menu_highlight="html_code"></div>
+
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		Appearance and Templates &#187; Subscription Form HTML
