--- a/dada/templates/list_activity_screen.tmpl
+++ b/dada/templates/list_activity_screen.tmpl
@@ -1,7 +1,10 @@
-<!-- begin list_activity --> 
+<!-- begin list_activity_screen.tmpl --> 
 
 <!-- tmpl_set name="title" value="Membership &#187; Recent Activity" -->
 <!-- tmpl_set name="load_google_viz" value="1" -->
+
+
+<div id="screen_meta" data-menu_highlight="list_activity"></div>
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -42,4 +45,4 @@
 
 
 
-<!-- end list_activity --> 
+<!-- end list_activity_screen.tmpl --> 
