--- a/dada/templates/list_cp_options_screen.tmpl
+++ b/dada/templates/list_cp_options_screen.tmpl
@@ -1,6 +1,8 @@
-<!-- begin list_cp_options.tmpl --> 
+<!-- begin list_cp_options_screen.tmpl --> 
 
 <!-- tmpl_set name="title" value="Your List Control Panel &#187; Options" -->
+<div id="screen_meta" data-menu_highlight="list_cp_options"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -163,4 +165,5 @@ List Message Sending Screens
  
 
 
-<!-- end list_cp_options.tmpl --> 
+<!-- end list_cp_options_screen.tmpl --> 
+
