--- a/dada/templates/plugins/bounce_handler/manually_enter_bounces_results.tmpl
+++ b/dada/templates/plugins/bounce_handler/manually_enter_bounces_results.tmpl
@@ -1,5 +1,7 @@
 <!-- begin manually_enter_bounces_results --> 
 
+<div id="screen_meta" data-menu_highlight="bounce_handler"></div>
+
 <h1>Message Diagnostics</h1> 
 <table>
 <!-- tmpl_loop diagnostics -->
