--- a/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
+++ b/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
@@ -5,6 +5,7 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
+<div id="screen_meta" data-menu_highlight="bounce_handler"></div>
 <div id="plugins_bounce_handler_parse_bounce"></div> 
 
 
