--- a/dada/templates/plugins/bounce_handler/plugin_config.tmpl
+++ b/dada/templates/plugins/bounce_handler/plugin_config.tmpl
@@ -1,5 +1,6 @@
 
 <!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler &#187; Configuration" --> 
+<div id="screen_meta" data-menu_highlight="bounce_handler"></div>
 
 <p id="breadcrumbs">
 <a href="<!-- tmpl_var Plugin_URL -->"> 
