--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -1,7 +1,5 @@
- <!-- tmpl_set name="title" value="Bridge" -->
-
-
-
+<!-- tmpl_set name="title" value="Bridge" -->
+<div id="screen_meta" data-menu_highlight="bridge"></div>
 
 
 <div id="screentitle"> 
