--- a/dada/templates/plugins/bridge/edit_email_msgs.tmpl
+++ b/dada/templates/plugins/bridge/edit_email_msgs.tmpl
@@ -1,17 +1,20 @@
 
-	<!-- tmpl_set name="title" value="Bridge &#187; Customize Email Messages" -->
-	<div id="screentitle"> 
-		<div id="screentitlepadding">
-			<!-- tmpl_var title --> 
-		</div>
-		<!-- tmpl_include help_link_widget.tmpl -->
+<!-- tmpl_set name="title" value="Bridge &#187; Customize Email Messages" -->
+<div id="screen_meta" data-menu_highlight="bridge"></div>
+
+
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
 	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
-  
+ 
 
-	<!-- tmpl_if done -->
-	    <!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
-	<!--/tmpl_if-->
+<!-- tmpl_if done -->
+    <!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
+<!--/tmpl_if-->
 
 <p class="alert">Leave a Subject or Message blank to have it revert to the default subject or message.</p> 
 
