--- a/dada/templates/plugins/bridge/plugin_config.tmpl
+++ b/dada/templates/plugins/bridge/plugin_config.tmpl
@@ -1,5 +1,7 @@
 
 <!-- tmpl_set name="title" value="Bridge &#187; Plugin Configuration" --> 
+<div id="screen_meta" data-menu_highlight="bridge"></div>
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
