--- a/dada/templates/plugins/bridge/test_pop3.tmpl
+++ b/dada/templates/plugins/bridge/test_pop3.tmpl
@@ -1,4 +1,6 @@
 <!-- tmpl_if chrome --> 
+
+	<div id="screen_meta" data-menu_highlight="bridge"></div>
 	<!-- tmpl_set name="title" value="Plugins &#187; Bridge &#187; POP3 Login Test" --> 
 	<div id="screentitle"> 
 		<div id="screentitlepadding">
