--- a/dada/templates/plugins/change_list_shortname/default.tmpl
+++ b/dada/templates/plugins/change_list_shortname/default.tmpl
@@ -1,4 +1,7 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Change List Shortname" -->
+
+<div id="screen_meta" data-menu_highlight="change_list_shortname"></div>
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
