--- a/dada/templates/plugins/default_mass_mailing_messages/default.tmpl
+++ b/dada/templates/plugins/default_mass_mailing_messages/default.tmpl
@@ -1,4 +1,5 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Default Mass Mailing Messages" -->
+<div id="screen_meta" data-menu_highlight="default_mass_mailing_messages"></div>
 
 
 <div id="screentitle"> 
