--- a/dada/templates/plugins/global_config/default.tmpl
+++ b/dada/templates/plugins/global_config/default.tmpl
@@ -1,4 +1,6 @@
 <!-- tmpl_set name="title" value="Global Config Helper" -->
+<div id="screen_meta" data-menu_highlight="global_config"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
