--- a/dada/templates/plugins/log_viewer/default.tmpl
+++ b/dada/templates/plugins/log_viewer/default.tmpl
@@ -1,4 +1,6 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Log Viewer" -->
+<div id="screen_meta" data-menu_highlight="log_viewer"></div>
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		Plugins &#187; Log Viewer
