--- a/dada/templates/plugins/mailing_monitor/default.tmpl
+++ b/dada/templates/plugins/mailing_monitor/default.tmpl
@@ -5,6 +5,8 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
+
+<div id="screen_meta" data-menu_highlight="mailing_monitor"></div>
 <div id="plugins_mailing_monitor_default"></div> 
 
 <fieldset> 
