--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -1,6 +1,9 @@
-<!-- begin clear_screen_cache.tmpl --> 
+<!-- begin view.tmpl --> 
+
 
 <!-- tmpl_set name="title" value="Plugins &#187; Screen Cache" -->
+<div id="screen_meta" data-menu_highlight="screen_cache"></div>
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
@@ -149,4 +152,4 @@
 </fieldset> 
 
 
-<!-- end clear_screen_cache.tmpl --> 
+<!-- end view.tmpl --> 
