--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -1,6 +1,9 @@
-<!-- begin profile_fields.tmpl --> 
+<!-- begin profile_fields_screen.tmpl --> 
 
 <!-- tmpl_set name="title" value="Profiles &#187; Profile Fields" -->
+<div id="screen_meta" data-menu_highlight="profile_fields"></div>
+
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		Profiles
@@ -462,5 +465,5 @@
 
 
 
-<!-- end profile_fields.tmpl --> 
+<!-- end profile_fields_screen.tmpl --> 
 
