--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin sending_monitor_screen.tmpl -->
 
+<div id="screen_meta" data-menu_highlight="sending_monitor"></div>
+
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		Mass Mailing &#187; Monitor Your Mailings
