--- a/dada/templates/sending_preferences_screen.tmpl
+++ b/dada/templates/sending_preferences_screen.tmpl
@@ -4,6 +4,8 @@
 
 <!-- tmpl_set name="title" value="Mail Sending &#187; Options" -->
 
+<div id="screen_meta" data-menu_highlight="sending_preferences"></div>
+
 
 
 <div id="screentitle"> 
