--- a/dada/templates/setup_info_screen.tmpl
+++ b/dada/templates/setup_info_screen.tmpl
@@ -1,6 +1,7 @@
 <!-- begin setup_info_screen.tmpl -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 <!-- tmpl_set name="title" value="App Information &#187; Configuration" -->
+<div id="screen_meta" data-menu_highlight="setup_info"></div>
 
 
 <div id="screentitle"> 
