--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin subscription_options_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Membership &#187; Options" -->
+<div id="screen_meta" data-menu_highlight="subscription_options"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
