--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -1,6 +1,7 @@
 <!-- begin view_list_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Membership &#187; View" -->
+<div id="screen_meta" data-menu_highlight="view_list"></div>
 
 <!-- tmpl_set name="load_google_viz" value="1" -->
 
