--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -31,6 +31,9 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
 <div id="add"></div>
+<div id="screen_meta" data-menu_highlight="add"></div>
+
+
 <form> 
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" /> 
 </form> 
