--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -1,6 +1,9 @@
 <!-- begin adv_archive_options_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Advanced Options" -->
+<!-- tmpl_set name="title" value="Message Archives &#187; Advanced Options" -->
+
+<div id="screen_meta" data-menu_highlight="adv_archive_options"></div>
+
 
 
 <div id="screentitle"> 
