--- a/dada/templates/archive_options_screen.tmpl
+++ b/dada/templates/archive_options_screen.tmpl
@@ -1,6 +1,10 @@
 <!-- begin archive_options_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Message Archives &#187; Archive Options" -->
+<div id="screen_meta" data-menu_highlight="archive_options"></div>
+
+
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
