--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -1,6 +1,8 @@
-<!-- tmpl_set name="title" value="Your Mailing List &#187; List Information" -->
-
 <!-- begin change_info_screen.tmpl -->
+
+
+<!-- tmpl_set name="title" value="Your Mailing List &#187; List Information" -->
+<div id="screen_meta" data-menu_highlight="change_info"></div>
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
