--- a/dada/templates/delete_email_screen_filtered.tmpl
+++ b/dada/templates/delete_email_screen_filtered.tmpl
@@ -1,4 +1,5 @@
 <!-- begin delete_email_screen_filtered.tmpl -->
+<div id="screen_meta" data-menu_highlight="delete_email"></div>
 
 <!-- tmpl_set name="title" value="Verify Deletions" -->
 <p>
