--- a/dada/templates/edit_template_screen.tmpl
+++ b/dada/templates/edit_template_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin edit_template_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Your Mailing List Template" -->
+<div id="screen_meta" data-menu_highlight="edit_template"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
