--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -2,6 +2,7 @@
 
 
 <!-- tmpl_set name="title" value="Membership &#187; Invite" -->
+<div id="screen_meta" data-menu_highlight="add"></div>
 
 
 <div id="screentitle"> 
