--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin list_options_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Your Mailing List &#187; Options" -->
+<div id="screen_meta" data-menu_highlight="list_options"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
