--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -1,6 +1,8 @@
-<!-- begin mass_mailing_options.tmpl -->
+<!-- begin mass_mailing_options_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Options" -->
+<div id="screen_meta" data-menu_highlight="mass_mailing_options"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -65,4 +67,4 @@
 
 
 
-<!-- end mass_mailing_options.tmpl -->
+<!-- end mass_mailing_options_screen.tmpl -->
