--- a/dada/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/templates/mass_mailing_preferences_screen.tmpl
@@ -1,4 +1,5 @@
 <!-- begin mass_mailing_preferences_screen.tmpl -->
+<div id="screen_meta" data-menu_highlight="mass_mailing_preferences"></div>
 <div id="mass_mailing_preferences"></div> 
 <form> 
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" />
