--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -1,16 +1,14 @@
-
+		
+<!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler" -->	
+<div id="screen_meta" data-menu_highlight="bounce_handler"></div>
 
 	
-		
-	<!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler" -->	
-	
-		
-	<div id="screentitle"> 
-		<div id="screentitlepadding">
-			<!-- tmpl_var title -->
-		</div>
-		<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title -->
 	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 <div id="plugins_bounce_handler_default"></div> 
 <form> 
