--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -1,5 +1,8 @@
 	
 <!-- tmpl_set name="title" value="Plugins &#187; Password Protect Directories" --> 
+<div id="screen_meta" data-menu_highlight="password_protect_directories"></div>
+
+
 <div id="screentitle"> 
 <div id="screentitlepadding">
 	<!-- tmpl_var title --> 
