--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -9,6 +9,7 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
+<div id="screen_meta" data-menu_highlight="tracker"></div>
 <div id="plugins_tracker_default"></div> 
 
 
