--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -10,6 +10,7 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
 <div id="send_email_screen"></div> 
+<div id="screen_meta" data-menu_highlight="send_email"></div>
 
 <form name="mass_mailing" id="mass_mailing" enctype="multipart/form-data" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
 
