--- a/dada/templates/send_url_email_process_screen.tmpl
+++ b/dada/templates/send_url_email_process_screen.tmpl
@@ -1,4 +1,5 @@
 <!-- begin send_url_process_screen.tmpl -->
+<div id="screen_meta" data-menu_highlight="send_url_email"></div>
 
 <!-- tmpl_if problems -->
 	
