--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin send_url_screen.tmpl -->
 
+<div id="screen_meta" data-menu_highlight="send_url_email"></div>
+
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Webpage" -->
 <!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
 
