--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin view_archive_index_screen.tmpl --> 
 
 <!-- tmpl_set name="title" value="Message Archives &#187; View Archive" -->
+<div id="screen_meta" data-menu_highlight="view_archive"></div>
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
